progress on html and color change on hour

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,9 +29,57 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <table class="table table-light" class="time-block" class="tableTime">
+        <tbody>
+          <tr class="row">
+            <td class="hour">9AM</td>
+            <td><textarea id="input"></textarea></td>
+            <td><button class="saveBtn"></button></td>
+          </tr>
+          <tr class="row">
+            <td class="hour"> 10AM</td>
+            <td><textarea id="input"></textarea></td>
+            <td><button class="saveBtn"></button></td>
+          </tr>
+          <tr class="row">
+            <td class="hour">11AM</td>
+            <td><textarea id="input"></textarea></td>
+            <td><button class="saveBtn"></button></td>
+          </tr>
+          <tr class="row">
+            <td class="hour">12PM</td>
+            <td><textarea id="input"></textarea></td>
+            <td><button class="saveBtn"></button></td>
+          </tr>
+          <tr class="row">
+            <td class="hour">1PM</td>
+            <td><textarea id="input"></textarea></td>
+            <td><button class="saveBtn"></button></td>
+          </tr>
+          <tr class="row">
+            <td class="hour">2PM</td>
+            <td><textarea id="input"></textarea></td>
+            <td><button class="saveBtn"></button></td>
+          </tr>
+          <tr class="row">
+            <td class="hour">3PM</td>
+            <td><textarea id="input"></textarea></td>
+            <td><button class="saveBtn"></button></td>
+          </tr>
+          <tr class="row">
+            <td class="hour">4PM</td>
+            <td><textarea id="input"></textarea></td>
+            <td><button class="saveBtn"></button></td>
+          </tr>
+          <tr class="row">
+            <td class="hour">5PM</td>
+            <td><textarea id="input"></textarea></td>
+            <td><button class="saveBtn"></button></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-          <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
   </body>
